tests/ResolvedBugs/moduleSumMay2019.expected
fmod FOO is
  protecting NAT + QID .
endfm
Warning: <standard input>, line 14 (fmod FOO): syntax error

Bye.
